[gd_scene load_steps=7 format=3 uid="uid://cd6t7nhbdlht8"]

[ext_resource type="Script" path="res://assets/scripts/enemy_base.gd" id="1_g2ro6"]
[ext_resource type="Script" path="res://assets/scripts/damage_box.gd" id="2_3heg2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xdo6"]
size = Vector2(4.33262, 6.84593)

[sub_resource type="CircleShape2D" id="CircleShape2D_gpvrg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_io8xo"]
radius = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ypdag"]
size = Vector2(36, 7)

[node name="EnemyBase" type="CharacterBody2D"]
collision_layer = 7
safe_margin = 0.2
script = ExtResource("1_g2ro6")
damage = 20

[node name="Collision" type="CollisionShape2D" parent="."]
scale = Vector2(4.15453, 4.09002)
shape = SubResource("RectangleShape2D_2xdo6")

[node name="PlanetDetect" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlanetDetect"]
shape = SubResource("CircleShape2D_gpvrg")

[node name="PlayerDetect" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource("CircleShape2D_io8xo")

[node name="DamageBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
monitoring = false
script = ExtResource("2_3heg2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageBox"]
shape = SubResource("RectangleShape2D_ypdag")

[node name="Grounded" type="RayCast2D" parent="."]
target_position = Vector2(0, 12)
collision_mask = 3

[node name="SideDetect" type="RayCast2D" parent="."]
target_position = Vector2(10, 0)

[node name="AttackWait" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="PlanetDetect" to="." method="_on_planet_detect_area_entered"]
[connection signal="area_exited" from="PlanetDetect" to="." method="_on_planet_detect_area_exited"]
[connection signal="area_entered" from="PlayerDetect" to="." method="_on_player_detect_area_entered"]
[connection signal="area_exited" from="PlayerDetect" to="." method="_on_player_detect_area_exited"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_player_detect_body_exited"]
[connection signal="timeout" from="AttackWait" to="." method="_on_attack_wait_timeout"]
